--- a/thankyou/index.html
+++ b/thankyou/index.html
@@ -15,8 +15,22 @@
 		}
 		var id = getRndInteger(1000001, 9999999999);
 	</script>
-	
+	<!-- Global site tag (gtag.js) - Google Ads: 436065930 -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=AW-436065930"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
 
+	  gtag('config', 'AW-436065930');
+	</script>
+	<!-- Event snippet for Purchase 13 conversion page -->
+	<script>
+	  gtag('event', 'conversion', {
+		  'send_to': 'AW-436065930/EQPACO-70PMBEIqt988B',
+		  'transaction_id': ''
+	  });
+	</script>
 
   </head>
   <body>
